일단 이거 먼저 Colab을 통해 생성됨

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1L4DLip4q2vj-HZtxCrVtyfZqB_8JsNJJ",
-      "authorship_tag": "ABX9TyOBQeyN/PPGQm2aauUYgPlx",
+      "authorship_tag": "ABX9TyPNoEZ5V3qQW/hk1p8HTqXi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,18 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/raspberryscorn/colab_tutorial/blob/main/tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive/')"
+      ],
+      "metadata": {
+        "id": "fNAHJYA56390"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
