일단 이거 먼저!! Colab을 통해 생성됨

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1L4DLip4q2vj-HZtxCrVtyfZqB_8JsNJJ",
-      "authorship_tag": "ABX9TyPNoEZ5V3qQW/hk1p8HTqXi",
+      "authorship_tag": "ABX9TyN7xxu8N7YvGIqIkHuTvnjn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,6 +40,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "본인 계정의 구글 드라이브에 연동."
+      ],
+      "metadata": {
+        "id": "lmfs122E7IH1"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -63,6 +72,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "구글 드라이브에 \"ddeep\"이라는 폴더 생성 후 컴파일.\n",
+        "ddeep은 내마음대로 정한 이름."
+      ],
+      "metadata": {
+        "id": "3sYLDywH7PMd"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!git clone http://github.com/needleworm/bhban_ai"
@@ -72,6 +91,17 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "교재 저자의 github를 통해 예제원본 다운로드. 다운로드 후 각 폴더의 이름을 자신에게 맞게 수정바람. 폴더명이 한글일 경우 컴파일이 안되는 경우가 허다함.\n",
+        "\"[2편] 인간의 뇌세포를 흉내 낸 인공지능 - FNN\" => \"SECTION_2\"\n",
+        "\"[5장] 분류(Classification) 기법 활용하기\" => \"Chapter_5\""
+      ],
+      "metadata": {
+        "id": "lf-M5WkU7YVM"
+      }
     }
   ]
 }
